--- a/public/index.html
+++ b/public/index.html
@@ -11,38 +11,16 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>HTMX Demo With Traversy</title>
   </head>
-  <body class="bg-gray-100">
-    <div class="container mx-auto mt-8 text-center">
-      <div class="bg-white p-4 border rounded-lg max-w-lg m-auto">
-        <h1 class="text-2xl font-bold mb-4">Temperature Converter</h1>
-        <form
-          hx-trigger="submit"
-          hx-post="/convert"
-          hx-target="#result"
-          hx-indicator="#loading"
-        >
-          <label for="fahrenheit">Fahrenheit:</label>
-          <input
-            type="number"
-            id="fahrenheit"
-            name="fahrenheit"
-            class="border p-2 rounded"
-            value="32"
-            required
-          />
-          <button
-            type="submit"
-            class="bg-blue-500 text-white px-4 py-2 rounded"
-          >
-            Convert
-          </button>
-
-          <div id="result" class="mt-6 text-xl"></div>
-          <span class="htmx-indicator" id="loading">
-            <img src="img/loader.gif" alt="Loading..." class="m-auto h-10" />
-          </span>
-        </form>
-      </div>
+  <body
+    class="bg-blue-900 text-white min-h-screen flex items-center justify-center"
+  >
+    <div class="text-center">
+      <h1 class="text-xl mb-4">Weather in Manchester</h1>
+      <p class="text-5xl">
+        <span hx-get="/get-temperature" hx-trigger="every 5s">
+          Loading....
+        </span>
+      </p>
     </div>
   </body>
 </html>
